# SENSE-The-Game

./: .gitignore  CMakeLists.txt  README.md  SENSE THE GAME.sln  SENSE THE GAME.vcxproj  SENSE THE GAME.vcxproj.filters  incbin_import.cmake  install_launcher.cmake  local.properties  msvc_config.cmake  packages.config  sdl2_import.cmake
app/: build.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt  android_config.cmake  incbin_import.cmake  install_launcher.cmake  msvc_config.cmake  resources.rc.in  sdl2_import.cmake
app/src/main/cpp/: main.cpp
app/src/main/cpp/application/: audio.cpp  game.cpp  module.cmake  window.cpp
app/src/main/cpp/application/application/: audio.hpp  game.hpp  window.hpp
app/src/main/cpp/assets/: .gitignore  assets.cpp  autogen.cmake  checkpoints.cpp  incbin_tool.cmake  module.cmake
app/src/main/cpp/assets/assets/: assets.hpp  checkpoints.hpp
app/src/main/cpp/assets/templates/: assets.cpp.template  assets.hpp.template
app/src/main/cpp/events/: keydownEvent.cpp  module.cmake  playerKeydownEvent.cpp
app/src/main/cpp/events/events/: keydownEvent.hpp  playerKeydownEvent.hpp
app/src/main/cpp/objects/: background.cpp  decor.cpp  end.cpp  endRender.cpp  flora.cpp  module.cmake  player.cpp  reload.cpp  road.cpp  scale.cpp  soundtrack.cpp  text.cpp
app/src/main/cpp/objects/objects/: background.hpp  decor.hpp  decor_config.hpp  end.hpp  endRender.hpp  flora.hpp  flora_config.hpp  player.hpp  reload.hpp  road.hpp  scale.hpp  soundtrack.hpp  text.hpp
app/src/main/cpp/utils/: camera.cpp  localization.cpp  modding.cpp  module.cmake  music.cpp  renderTilingTexture.cpp  sfx.cpp  soundtrack.cpp  texture.cpp  waveform.cpp
app/src/main/cpp/utils/utils/: camera.hpp  localization.hpp  modding.hpp  music.hpp  renderTilingTexture.hpp  sfx.hpp  soundtrack.hpp  texture.hpp  waveform.hpp
app/src/main/cpp/window/: module.cmake  window.cpp
app/src/main/cpp/window/window/: window.hpp
app/src/main/java/com/anarchy/sense/: MainActivity.java
app/src/main/java/com/ipoleksenko/sense/: MainActivity.java  MediaFileProvider.java
app/src/main/res/values/: strings.xml
src/: main.cpp
src/Events/: keydownEvent.h
src/assets/: assets.cpp  autogen.cmake  module.cmake
src/assets/assets/: assets.hpp  macro.hpp
src/assets/templates/: assets.hpp.template
src/events/: keydownEvent.cpp  module.cmake  playerKeydownEvent.cpp  playerKeydownEvent.h
src/events/events/: keydownEvent.hpp  playerKeydownEvent.hpp
src/objects/: TextureInterface.h  background.cpp  background.h  endRender.cpp  endRender.h  flora.cpp  module.cmake  player.cpp  player.h  reload.cpp  road.cpp  road.h  scale.cpp  scale.h  text.cpp  text.h
src/objects/objects/: background.hpp  endRender.hpp  flora.hpp  player.hpp  reload.hpp  road.hpp  scale.hpp  text.hpp
src/utils/: camera.cpp  camera.h  module.cmake  renderTilingTexture.cpp  renderTilingTexture.h  scaledTextureSize.h  soundTrack.cpp  soundtrack.cpp  updatePlayerText.cpp  updatePlayerText.h
src/utils/utils/: camera.hpp  renderTilingTexture.hpp  soundtrack.hpp
src/window/: module.cmake  window.cpp  window.h
src/window/window/: window.hpp
